refactor: 전체 레이어 대규모 리팩토링 - ClockHolder 제거, REST API 구조 개선, 공통 VO 추가
주요 변경사항:
- ClockHolder/SystemClockHolder 제거, Clock DI 방식으로 전환
- REST API: Endpoints 인터페이스 분리, GatewaySecurityBridgeFilter 교체
- REST API: 환경별 yml 분리 (local/prod), OpenAPI 설정 개선
- Application: metrics/tracing 코드 제거, TransactionEventRegistry 이동
- Application: 공통 DTO/Factory/Time 구조 추가
- Domain: 공통 VO 추가 (Address, Email, Money, PhoneNumber 등)
- Domain: Schedule identifier → id 패키지 전환, query 패키지 추가
- .claude: commands 체계 → skills 기반 체계로 전환
- 테스트: 전체 레이어 테스트 코드 동기화